--- a/seminarski/css/styles.css
+++ b/seminarski/css/styles.css
@@ -117,7 +117,7 @@ p {
 
 .feature-images{
   margin-bottom: 1rem;
-  width: 70%;
+  width: 90%;
   border-radius: 10%;
   border-style: solid;
   border-width: 5px;
@@ -223,4 +223,26 @@ p {
     position: static;
     transform: rotate(0);
   }
+}
+
+.modal-title{
+  font-family: Ubuntu;
+  margin: auto;
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
+.modal-header{
+  background-color: #ff4c68;
+  color: white;
+}
+
+.form-group{
+  text-align: left;
+  font-size: 1rem;
+  font-weight: bold;
+}
+
+.col-form-label{
+  margin-left: 1%;
 }
